[package]
name = "dumballoc"
version = "0.1.0"
authors = ["Ivan Boldyrev <lispnik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vmap = "0.1"
libc = "0.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[lib]
name = "dumballoc"
crate-type = ["cdylib"]
